# UFOlogyNet

./: .gitignore  LICENSE  README.md  anon_pdf_timeline_graph.html  app.py  config.yaml  data_import_formatting.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: edges.csv  entities.csv  fixed_nodes - nodes.csv  graph_data.json  graph_data_final.csv  mapping_dict.json  nodes.csv  parsed_data.csv  phenomena_timeline_edges.json  phenomena_timeline_nodes.json  project_amanita_edges.json  project_amanita_nodes.json
data/new_data_from_me/: project_amanita_edges.json
notebooks/: 1_parsing.ipynb  2_getting_entities.ipynb  3_0_cleaning_data.ipynb  3_1_cleaning_data_v2.ipynb  3_cleaning_data.ipynb  4_visualization.ipynb  testing.ipynb
notebooks/old_not_used/: visualization_w_graphistry.ipynb
streamlit/: app.py  data_import_formatting.py  requirements.txt
utilities/: app_utilities.py  data_processing.py
working_area/: working_investigation.ipynb
