[tool.poetry]
name = "anonymous-phenomena-timeline"
version = "0.1.0"
description = "Work around the phenomena timeline"
authors = ["noahkarsky <noah.karsky8@gmail.com>"]
readme = "README.md"
packages = [{include = "anonymous_phenomena_timeline"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
streamlit-agraph = "^0.0.45"
pandas = "^2.1.0"
openai = "^0.28.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
